--- a/html/news-single.html
+++ b/html/news-single.html
@@ -120,7 +120,7 @@
 						<li class="footer__item"><a href="about.html" class="footer__link">企業概要</a></li>
 					</ul>
 					<ul class="footer__list2">
-						<li class="footer__item"><a href="news-single.html" class="footer__link">お知らせ</a></li>
+						<li class="footer__item"><a href="news.html" class="footer__link">お知らせ</a></li>
 						<li class="footer__item"><a href="blog.html" class="footer__link">ブログ</a></li>
 						<li class="footer__item"><a href="contact.html" class="footer__link">お問い合わせ</a></li>
 					</ul>
